[gd_scene load_steps=21 format=3 uid="uid://b2stswfb37sss"]

[ext_resource type="Script" path="res://Scripts/Towers/base_tower.gd" id="1_wk840"]
[ext_resource type="PackedScene" uid="uid://cdufr2ci26eca" path="res://Scenes/Single/Towers/blue_tower.tscn" id="2_flutn"]
[ext_resource type="PackedScene" uid="uid://b8xw6tmbhl4np" path="res://Scenes/Single/Towers/red_tower.tscn" id="2_x6c1m"]
[ext_resource type="PackedScene" uid="uid://btxahyaw2tq4a" path="res://Scenes/Single/Towers/yellow_tower.tscn" id="3_vpxwr"]
[ext_resource type="Texture2D" uid="uid://cyopv5sp8buww" path="res://UI/Buttons/Button_Blue.png" id="4_rfyub"]
[ext_resource type="Texture2D" uid="uid://c1xb8ebjkmnd7" path="res://UI/Buttons/Button_Blue_Pressed.png" id="5_sjr6q"]
[ext_resource type="Texture2D" uid="uid://dc6bxhefqd8na" path="res://UI/Buttons/Button_Hover.png" id="6_3p6eq"]
[ext_resource type="Script" path="res://Scripts/Towers/buttons_hide.gd" id="6_rgjyr"]
[ext_resource type="Texture2D" uid="uid://byunascj5xdd3" path="res://UI/Buttons/Button_Red.png" id="7_8hpsc"]
[ext_resource type="Texture2D" uid="uid://doumto745rs3a" path="res://UI/Buttons/Button_Red_Pressed.png" id="8_rddlk"]
[ext_resource type="Script" path="res://Scripts/Towers/replace_tower.gd" id="9_12cmk"]
[ext_resource type="Texture2D" uid="uid://1gmopjtl1x04" path="res://UI/Icons/Regular_02.png" id="11_1oadr"]
[ext_resource type="Script" path="res://Scripts/Towers/delete.gd" id="11_aechp"]
[ext_resource type="Script" path="res://Scripts/Towers/tower_select.gd" id="11_p56lm"]
[ext_resource type="Texture2D" uid="uid://vnj1vr78rafv" path="res://UI/Icons/Pressed_02.png" id="12_gs2kg"]
[ext_resource type="Script" path="res://Scripts/Towers/tower_position_show_menu.gd" id="13_aboxp"]
[ext_resource type="Script" path="res://Scripts/Towers/tower_position.gd" id="13_rlu8e"]
[ext_resource type="Texture2D" uid="uid://jphaerq2dasi" path="res://UI/Icons/Regular_01.png" id="14_mfvcn"]
[ext_resource type="Texture2D" uid="uid://r2yir60ul2bl" path="res://UI/Icons/Pressed_01.png" id="15_v3rum"]
[ext_resource type="Texture2D" uid="uid://cieu8odu5sgbu" path="res://Assets/resourses/Buildings/houses/knights/Tower/Tower_Construction.png" id="19_ukaty"]

[node name="Base_Tower" type="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -47.5
offset_right = 64.5
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wk840")

[node name="Towers" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.776471)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -362.5
offset_right = 260.0
offset_bottom = -111.5
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("13_rlu8e")

[node name="red_tower" parent="Towers" instance=ExtResource("2_x6c1m")]
position = Vector2(86, 128)
metadata/_edit_group_ = true

[node name="Select_red" type="Button" parent="Towers/red_tower"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -58.0
offset_top = -80.0
offset_right = 58.0
offset_bottom = 110.0

[node name="blue_tower" parent="Towers" instance=ExtResource("2_flutn")]
position = Vector2(246, 132)
metadata/_edit_group_ = true

[node name="Select_blue" type="Button" parent="Towers/blue_tower"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -58.0
offset_top = -78.0
offset_right = 58.0
offset_bottom = 108.0

[node name="yellow_tower" parent="Towers" instance=ExtResource("3_vpxwr")]
position = Vector2(404, 128)
metadata/_edit_group_ = true

[node name="Select_yellow" type="Button" parent="Towers/yellow_tower"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -58.0
offset_top = -78.0
offset_right = 58.0
offset_bottom = 106.0

[node name="Buttons" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.894118)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.39147
anchor_top = -0.468421
anchor_right = 2.10465
anchor_bottom = 2.41579
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_rgjyr")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -100.0
offset_right = 32.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="upgrade" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_rfyub")
texture_pressed = ExtResource("5_sjr6q")
texture_hover = ExtResource("6_3p6eq")

[node name="replace" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_rfyub")
texture_pressed = ExtResource("5_sjr6q")
texture_hover = ExtResource("6_3p6eq")
script = ExtResource("9_12cmk")
offset = Vector2(2, -70)

[node name="icon" type="Sprite2D" parent="Buttons/VBoxContainer/replace"]
position = Vector2(32, 31)
texture = ExtResource("11_1oadr")

[node name="icon_pressed" type="Sprite2D" parent="Buttons/VBoxContainer/replace"]
position = Vector2(32, 31)
texture = ExtResource("12_gs2kg")

[node name="delete" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_8hpsc")
texture_pressed = ExtResource("8_rddlk")
texture_hover = ExtResource("6_3p6eq")
script = ExtResource("11_aechp")
delete_delay = 0.15

[node name="icon" type="Sprite2D" parent="Buttons/VBoxContainer/delete"]
position = Vector2(32, 32)
texture = ExtResource("14_mfvcn")

[node name="icon_pressed" type="Sprite2D" parent="Buttons/VBoxContainer/delete"]
position = Vector2(32, 32)
texture = ExtResource("15_v3rum")

[node name="Tower_position" type="Node2D" parent="."]
position = Vector2(34, 2)
script = ExtResource("13_aboxp")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(63, -10)
texture = ExtResource("19_ukaty")

[node name="Tower_Select" type="Button" parent="Sprite"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -68.0
offset_top = 9.0
offset_right = 68.0
offset_bottom = 104.0
script = ExtResource("11_p56lm")

[connection signal="pressed" from="Towers/red_tower/Select_red" to="Towers" method="_on_select_red_pressed"]
[connection signal="pressed" from="Towers/blue_tower/Select_blue" to="Towers" method="_on_select_blue_pressed"]
[connection signal="pressed" from="Towers/yellow_tower/Select_yellow" to="Towers" method="_on_select_yellow_pressed"]
[connection signal="button_down" from="Buttons/VBoxContainer/replace" to="Buttons/VBoxContainer/replace" method="_on_button_down"]
[connection signal="button_up" from="Buttons/VBoxContainer/replace" to="Buttons/VBoxContainer/replace" method="_on_button_up"]
[connection signal="pressed" from="Buttons/VBoxContainer/replace" to="Buttons/VBoxContainer/replace" method="_on_pressed"]
[connection signal="button_down" from="Buttons/VBoxContainer/delete" to="Buttons/VBoxContainer/delete" method="_on_button_down"]
[connection signal="button_up" from="Buttons/VBoxContainer/delete" to="Buttons/VBoxContainer/delete" method="_on_button_up"]
[connection signal="pressed" from="Buttons/VBoxContainer/delete" to="Buttons/VBoxContainer/delete" method="_on_pressed"]
[connection signal="pressed" from="Sprite/Tower_Select" to="Sprite/Tower_Select" method="_on_pressed"]
[connection signal="tower_selected" from="Sprite/Tower_Select" to="." method="_on_tower_select_tower_selected"]
